<resources>

    <string name="app_name">DSM-Project</string>

    <string name="SignIn_WelcomeText">Inicio de sesión</string>
    <string name="SignIn_SignIn">Enviar</string>
    <string name="SignIn_SignInGoogle">Iniciar con Google</string>
    <string name="SignIn_SignUp">Regístrarte</string>

    <string name="SignUp_WelcomeText">Regístro de usuarios</string>
    <string name="SignUp_PasswordPattern">Tu contraseña debe cumplir con:</string>

    <string name="Hint_Mail">Correo electrónico</string>
    <string name="Hint_Password">Contraseña</string>
    <string name="Hint_ConfirmationPassword">Confirmar contraseña</string>
    <string name="Hint_Name">Nombre y apellido</string>
    <string name="Hint_DUI">DUI</string>
    <string name="Hint_Address">Dirección</string>
    <string name="Hint_Phone">Teléfono</string>
    <string name="Hint_PasswordLength">Almenos 8 caracteres</string>
    <string name="Hint_PasswordUpper">Mayusculas</string>
    <string name="Hint_PasswordLower">Minusculas</string>
    <string name="Hint_PasswordNumbers">Números</string>
    <string name="Hint_PasswordSymbols">Símbolos: @$!%*?</string>

</resources>