<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="-216dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="175dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60sp"
                android:gravity="center_horizontal"
                android:text="@string/SignUp_WelcomeText"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etSignUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/Hint_Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etSignUpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/Hint_Address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etSignUpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Hint_Phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etSignUpDUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Hint_DUI"
                android:inputType="number" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/etSignUpMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/Hint_Mail"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/SignUp_PasswordPattern"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cbSignUpPasswordLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_PasswordLength"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbSignUpPasswordUpper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_PasswordUpper"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbSignUpPasswordLower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_PasswordLower"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbSignUpPasswordNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_PasswordNumbers"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbSignUpPasswordSymbols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_PasswordSymbols"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/Hint_Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etSignUpConfirmationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:ems="10"
                android:hint="@string/Hint_ConfirmationPassword"
                android:inputType="textPassword" />

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSignUpSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="30sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/SignIn_SignUp" />



        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>