<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9000000"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="305dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:gravity="center_horizontal"
            android:text="@string/SignIn_WelcomeText"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etSignInMail"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="20sp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/Hint_Mail"
            android:inputType="textPersonName"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10sp"
            android:background="#F6F6F6"
            android:ems="10"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" />

        <Button
            android:id="@+id/btnSignInSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/SignIn_SignIn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#F80000" />

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10sp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/SignIn_SignInGoogle"
            android:textColor="#FDFCFC"
            android:textSize="20sp"
            app:backgroundTint="#F80000" />

        <Button
            android:id="@+id/btnSignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/SignIn_SignUp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#F80000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>